chromium/pages/options/style.css
body{
  min-width: 500px;
  display: block;
}

a.settings{
	background-color: #1c87c9;
	border: none;
	color: white;
	padding: 20px 34px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	font-size: 20px;
	margin: 4px 2px;
}

.settings-wrapper{
  margin: 10px 0 0 0;
}

.settings-wrapper#update-wrapper{
  margin-bottom: 20px;
}

.settings-wrapper#show-devtools-tab-wrapper{
  margin-bottom: 20px;
}

/** User rules Option**/
.user-rules-wrapper-header {
  font-weight: bold;
  padding-left: 5px;
}
.user-rules-list-item:last-of-type {
  border-bottom: none;
}
.user-rules-list-item {
  border-bottom: 1px solid #ccc;
  display: inline-flex;
  margin-left: 5%;
  width: 80%;
}
.user-rules-list-item p {
  width: 100%;
}

/** Disabled Sites Option**/
.disabled-rules-wrapper-header {
  font-weight: bold;
  padding-left: 5px;
}
img.remove{
  cursor: pointer;
  float: right;
  height: 15px;
  margin: 10px 0 0 8%;
  width: 15px;
}
.disabled-rule-list-item:last-of-type {
  border-bottom: none;
}
.disabled-rule-list-item {
  border-bottom: 1px solid #ccc;
  display: inline-flex;
  margin-left: 5%;
  width: 80%;
}
.disabled-rule-list-item p {
  width: 100%;
}

.section-header{
  margin-bottom: 10px;
}

#import{
  margin-bottom: 10px;
  float: right;
}

#import-confirmed{
  display: none;
}

.section-header-span{
  font-size: 15px;
  border: 0px;
  border-radius: 13px;
  padding: 8px;
  margin-right: 10px;
  display: inline-block;
}

.section-header-span.active{
  background-color: #66ccff;
}

.section-header-span.inactive{
  background-color: #ddd;
}

.update-channel{
  margin-top: 30px;
  margin-bottom: 30px;
  border: 1px solid grey;
  border-radius: 20px;
  width: 498px;
}

.update-channel-name{
  font-weight: bold;
  font-size: 14px;
  margin: 10px;
}

.update-channel-column-left {
  width: 89px;
  float: left;
  font-size: 13px;
  text-align: right;
  margin-right: 10px;
  min-height: 1px;
}

.update-channel-column-right {
  float: left;
  width: 380px;
}

textarea.update-channel-jwk {
  width: 380px;
  height: 250px;
}

input.update-channel-path-prefix, input.update-channel-scope {
  width: 367px;
}

div.update-channel-row-scope {
  margin-top: 3px;
}

.update-channel-column-right button {
  float: right;
  margin: 10px;
  border-radius: 7px;
}

button#add-update-channel, button#add-disabled-site {
  float: right;
  margin: 0px 10px 10px 10px;
  border-radius: 7px;
}

input#update-channel-name, input#disabled-site {
  float: right;
}

.clearer{
  clear: both;
}

.update-channel-last-updated {
  float: right;
  font-weight: lighter;
  font-size: 10px;
}

div#update-channels-error, div#update-channels-warning {
  margin-top: 20px;
  font-weight: bold;
  padding: 10px;
  border-radius: 10px;
}

div#update-channels-error {
  background-color: #CC3333;
  display: none;
  color: white;
}

div#update-channels-warning {
  background-color: #FFCC00;
  font-color: black;
}

#update-channels-error-text{
  display: inline-block;
  width: 460px;
}

img#update-channels-error-hide {
  float: right;
}

div#update-channels-last-checked {
  margin-top: 10px;
  float: right;
  font-weight: bold;
  font-size: 10px;
}

#update-channels-wrapper{
  width: 500px;
}

@keyframes flash {
  from {
    background: #fc0;
  }
  to {
    background: transparent;
  }
}

#secretArea {
  border-radius: 5px;
  padding: 5px;
}

.hidden {
  display: none
}

.flash {
  animation: flash 1s ease-out;
}

